examples/test/conf/EdgionTls/https/HTTPRoute.yaml
# EdgionTls HTTPS  HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: edgiontls-https-route
  namespace: edgion-test
spec:
  parentRefs:
    - name: edgiontls-https-gateway
      namespace: edgion-test
      sectionName: https
  hostnames:
    - test.example.com
  rules:
    # /secure/*  HTTPS 
    - matches:
        - path:
            type: PathPrefix
            value: /secure
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
    # / 
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
