examples/test/conf/EdgionTls/https/Service.yaml
# EdgionTls HTTPS 测试 Service
apiVersion: v1
kind: Service
metadata:
  name: test-http
  namespace: edgion-test
spec:
  ports:
    - port: 30001
      targetPort: 30001
      protocol: TCP
